fixup! fixup! [WIP] Rename the `timestamp` data type to `timestamp with time zone`.