@@ -31,7 +31,7 @@ import io.crate.types.DataType;
 import io.crate.types.DataTypes;
 import org.junit.Test;
 
-import java.util.Arrays;
+import java.util.List;
 
 public class VarianceAggregationTest extends AggregationTest {
 
@@ -40,8 +40,9 @@ public class VarianceAggregationTest extends AggregationTest {
     }
 
     @Test
-    public void testReturnType() throws Exception {
-        for (DataType<?> type : Iterables.concat(DataTypes.NUMERIC_PRIMITIVE_TYPES, Arrays.asList(DataTypes.TIMESTAMP))) {
+    public void testReturnType() {
+        for (DataType<?> type :
+            Iterables.concat(DataTypes.NUMERIC_PRIMITIVE_TYPES, List.of(DataTypes.TIMESTAMPZ))) {
             // Return type is fixed to Double
             assertEquals(DataTypes.DOUBLE,
                 getVariance(type).info().returnType());
